kustomize/overlays/stage/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demoapp
spec:
  replicas: 2
  template:
    spec:
      containers:
      - image: quay.io/user1/demoapp:stage
        imagePullPolicy: Always
        name: demoapp
        ports:
          - containerPort: 8080
            protocol: TCP
