kustomize/overlays/stage/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: demoapp
spec:
  host: staging-demoapp-article-kustomize.apps-crc.testing
  to:
    kind: Service
    name: staging-demoapp
